--- a/src/views/scss/reader.scss
+++ b/src/views/scss/reader.scss
@@ -13,5 +13,11 @@
         overflow: scroll !important;
         padding: 20px 30px;
         margin-top: $header-height;
+
+        & > div {
+            // TODO: should calculate this size dynamically
+            // scroll beyond the bottom
+            margin-bottom: 280px;
+        }
     }
 }
