--- a/src/views/templates/settings.html
+++ b/src/views/templates/settings.html
@@ -25,4 +25,19 @@
             </div>
         </div>
     </section>
+
+    <section _data="debug">
+        <h5 class="setting-title">Debug</h5>
+
+        <div class="form-check form-check-inline">
+            <label class="form-check-label">
+                <input class="form-check-input" type="radio" name="debug-switch" value="on"> On
+            </label>
+        </div>
+        <div class="form-check form-check-inline">
+            <label class="form-check-label">
+                <input class="form-check-input" type="radio" name="debug-switch" value="off"> Off
+            </label>
+        </div>
+    </section>
 </div>
