--- a/src/views/templates/settings.html
+++ b/src/views/templates/settings.html
@@ -40,4 +40,14 @@
             </label>
         </div>
     </section>
+
+    <section _data="editor">
+        <h5 class="setting-title">Editor</h5>
+
+        <label class="mr-sm-2" for="setting-keybinding">Keybinding</label>
+        <select class="form-control-sm custom-select mb-2 mr-sm-2 mb-sm-0" id="setting-keybinding">
+            <option value="default">Default</option>
+            <option value="emacs">Emacs</option>
+        </select>
+    </section>
 </div>
