--- a/src/views/scss/modal.scss
+++ b/src/views/scss/modal.scss
@@ -34,8 +34,19 @@
             }
 
             input {
-                line-height: inherit;
                 padding: 0.3rem 0.75rem;
+            }
+
+            .tt-menu {
+                width: 100%;
+                max-height: 150px;
+                overflow-y: auto;
+                padding: 8px;
+                background-color: #fff;
+                border: 1px solid #ccc;
+                border: 1px solid rgba(0, 0, 0, 0.2);
+                border-radius: 2px;
+                box-shadow: 0 5px 10px rgba(0,0,0,.2);
             }
         }
 
