--- a/src/views/scss/modal.scss
+++ b/src/views/scss/modal.scss
@@ -47,6 +47,10 @@
                 border: 1px solid rgba(0, 0, 0, 0.2);
                 border-radius: 2px;
                 box-shadow: 0 5px 10px rgba(0,0,0,.2);
+
+                .tt-suggestion {
+                    cursor: default;
+                }
             }
         }
 
