--- a/src/views/templates/modals/save-orphan-note.html
+++ b/src/views/templates/modals/save-orphan-note.html
@@ -21,7 +21,7 @@
             </div>
         </div>
         <div class="modal-footer">
-            <button type="button" class="btn btn-primary">Save</button>
+            <button type="button" class="save btn btn-primary">Save</button>
         </div>
     </div>
 </div>
