--- a/src/views/templates/settings.html
+++ b/src/views/templates/settings.html
@@ -50,4 +50,67 @@
             <option value="emacs">Emacs</option>
         </select>
     </section>
+
+    <section _data="git">
+        <h5 class="setting-title">Git</h5>
+
+        <div class="form-group row">
+            <label class="col-4 col-form-label">Username:</label>
+            <div class="col-7">
+                <input class="form-control form-control-sm" type="text">
+            </div>
+        </div>
+
+        <div class="form-group row">
+            <label class="col-4 col-form-label">Email:</label>
+            <div class="col-7">
+                <input class="form-control form-control-sm" type="email">
+            </div>
+        </div>
+
+        <div class="form-group row">
+            <label class="col-4 col-form-label">Remote:</label>
+            <div class="col-7">
+                <input class="form-control form-control-sm" type="url">
+            </div>
+        </div>
+
+        <div class="form-group row">
+            <label class="col-4 col-form-label">Public Key:</label>
+            <div class="col-7">
+                <div class="input-group input-group-sm">
+                    <input type="text" class="form-control" placeholder="public key" readonly>
+                    <span class="input-group-btn">
+                        <button class="btn btn-secondary" type="button">Change</button>
+                    </span>
+                </div>
+            </div>
+        </div>
+
+        <div class="form-group row">
+            <label class="col-4 col-form-label">Private Key:</label>
+            <div class="col-7">
+                <div class="input-group input-group-sm">
+                    <input type="text" class="form-control" placeholder="private key" readonly>
+                    <span class="input-group-btn">
+                        <button class="btn btn-secondary" type="button">Change</button>
+                    </span>
+                </div>
+            </div>
+        </div>
+
+        <div class="form-group row">
+            <label class="col-4 col-form-label">Remote Username:</label>
+            <div class="col-7">
+                <input class="form-control form-control-sm" type="text">
+            </div>
+        </div>
+
+        <div class="form-group row">
+            <label class="col-4 col-form-label">Remote Password:</label>
+            <div class="col-7">
+                <input class="form-control form-control-sm" type="password">
+            </div>
+        </div>
+    </section>
 </div>
