--- a/src/views/templates/settings.html
+++ b/src/views/templates/settings.html
@@ -54,28 +54,28 @@
     <section _data="git">
         <h5 class="setting-title">Git</h5>
 
-        <div class="form-group row">
+        <div class="form-group row" _data="git.username">
             <label class="col-4 col-form-label">Username:</label>
             <div class="col-7">
                 <input class="form-control form-control-sm" type="text">
             </div>
         </div>
 
-        <div class="form-group row">
+        <div class="form-group row" _data="git.userEmail">
             <label class="col-4 col-form-label">Email:</label>
             <div class="col-7">
                 <input class="form-control form-control-sm" type="email">
             </div>
         </div>
 
-        <div class="form-group row">
+        <div class="form-group row" _data="git.remote">
             <label class="col-4 col-form-label">Remote:</label>
             <div class="col-7">
                 <input class="form-control form-control-sm" type="url">
             </div>
         </div>
 
-        <div class="form-group row">
+        <div class="form-group row" _data="git.sshPubKey">
             <label class="col-4 col-form-label">Public Key:</label>
             <div class="col-7">
                 <div class="input-group input-group-sm">
@@ -87,7 +87,7 @@
             </div>
         </div>
 
-        <div class="form-group row">
+        <div class="form-group row" _data="git.sshPrivKey">
             <label class="col-4 col-form-label">Private Key:</label>
             <div class="col-7">
                 <div class="input-group input-group-sm">
@@ -99,14 +99,14 @@
             </div>
         </div>
 
-        <div class="form-group row">
+        <div class="form-group row" _data="git.remoteUsername">
             <label class="col-4 col-form-label">Remote Username:</label>
             <div class="col-7">
                 <input class="form-control form-control-sm" type="text">
             </div>
         </div>
 
-        <div class="form-group row">
+        <div class="form-group row" _data="git.remotePassword">
             <label class="col-4 col-form-label">Remote Password:</label>
             <div class="col-7">
                 <input class="form-control form-control-sm" type="password">
