--- a/src/views/templates/settings.html
+++ b/src/views/templates/settings.html
@@ -51,65 +51,88 @@
         </select>
     </section>
 
-    <section _data="git">
-        <h5 class="setting-title">Git</h5>
+    <section>
+        <h5 class="setting-title">Git Commons</h5>
 
         <div class="form-group row" _data="git.username">
-            <label class="col-4 col-form-label">Username:</label>
-            <div class="col-7">
+            <label class="col-2 col-form-label col-form-label-sm">Username:</label>
+            <div class="col-6">
                 <input class="form-control form-control-sm" type="text">
             </div>
         </div>
 
         <div class="form-group row" _data="git.userEmail">
-            <label class="col-4 col-form-label">Email:</label>
-            <div class="col-7">
+            <label class="col-2 col-form-label col-form-label-sm">Email:</label>
+            <div class="col-6">
                 <input class="form-control form-control-sm" type="email">
             </div>
         </div>
+    </section>
+
+    <section>
+        <h5 class="setting-title">Git Remote</h5>
 
         <div class="form-group row" _data="git.remote">
-            <label class="col-4 col-form-label">Remote:</label>
-            <div class="col-7">
+            <label class="col-1 col-form-label col-form-label-sm">Url:</label>
+            <div class="col-6">
                 <input class="form-control form-control-sm" type="url">
             </div>
         </div>
 
-        <div class="form-group row" _data="git.sshPubKey">
-            <label class="col-4 col-form-label">Public Key:</label>
-            <div class="col-7">
-                <div class="input-group input-group-sm">
-                    <input type="text" class="form-control" placeholder="public key" readonly>
-                    <span class="input-group-btn">
-                        <button class="btn btn-secondary" type="button">Change</button>
-                    </span>
+        <div class="form-group row" _data="git.auth">
+            <label class="col-1 col-form-label col-form-label-sm">Auth: </label>
+            <div class="col-6">
+                <div class="form-check form-check-inline">
+                    <label class="form-check-label">
+                        <input class="form-check-input" type="radio" name="auth-type" value="ssh"> SSH
+                    </label>
+                </div>
+                <div class="form-check form-check-inline">
+                    <label class="form-check-label">
+                        <input class="form-check-input" type="radio" name="auth-type" value="password"> Password
+                    </label>
                 </div>
             </div>
         </div>
 
-        <div class="form-group row" _data="git.sshPrivKey">
-            <label class="col-4 col-form-label">Private Key:</label>
-            <div class="col-7">
-                <div class="input-group input-group-sm">
-                    <input type="text" class="form-control" placeholder="private key" readonly>
-                    <span class="input-group-btn">
+        <div class="row ssh">
+            <div class="form-group row" _data="git.sshPubKey">
+                <label class="col-4 col-form-label col-form-label-sm">Public Key:</label>
+                <div class="col-7">
+                    <div class="input-group input-group-sm">
+                        <input type="text" class="form-control" placeholder="public key" readonly>
+                        <span class="input-group-btn">
                         <button class="btn btn-secondary" type="button">Change</button>
                     </span>
+                    </div>
+                </div>
+            </div>
+            <div class="form-group row" _data="git.sshPrivKey">
+                <label class="col-4 col-form-label col-form-label-sm">Private Key:</label>
+                <div class="col-7">
+                    <div class="input-group input-group-sm">
+                        <input type="text" class="form-control" placeholder="private key" readonly>
+                        <span class="input-group-btn">
+                        <button class="btn btn-secondary" type="button">Change</button>
+                    </span>
+                    </div>
                 </div>
             </div>
         </div>
 
-        <div class="form-group row" _data="git.remoteUsername">
-            <label class="col-4 col-form-label">Remote Username:</label>
-            <div class="col-7">
-                <input class="form-control form-control-sm" type="text">
+        <div class="row password">
+            <div class="form-group row" _data="git.remoteUsername">
+                <label class="col-4 col-form-label col-form-label-sm">Remote Username:</label>
+                <div class="col-7">
+                    <input class="form-control form-control-sm" type="text">
+                </div>
             </div>
-        </div>
 
-        <div class="form-group row" _data="git.remotePassword">
-            <label class="col-4 col-form-label">Remote Password:</label>
-            <div class="col-7">
-                <input class="form-control form-control-sm" type="password">
+            <div class="form-group row" _data="git.remotePassword">
+                <label class="col-4 col-form-label col-form-label-sm">Remote Password:</label>
+                <div class="col-7">
+                    <input class="form-control form-control-sm" type="password">
+                </div>
             </div>
         </div>
     </section>
