git remote settings

--- a/src/views/templates/settings.html
+++ b/src/views/templates/settings.html
@@ -83,12 +83,12 @@
             <label class="col-1 col-form-label col-form-label-sm">Auth: </label>
             <div class="col-6">
                 <div class="form-check form-check-inline">
-                    <label class="form-check-label">
+                    <label class="form-check-label col-form-label-sm">
                         <input class="form-check-input" type="radio" name="auth-type" value="ssh"> SSH
                     </label>
                 </div>
                 <div class="form-check form-check-inline">
-                    <label class="form-check-label">
+                    <label class="form-check-label col-form-label-sm">
                         <input class="form-check-input" type="radio" name="auth-type" value="password"> Password
                     </label>
                 </div>
