--- a/src/views/templates/modals/git-auth-setting.html
+++ b/src/views/templates/modals/git-auth-setting.html
@@ -24,9 +24,9 @@
                 <div class="form-group row justify-content-center">
                     <div class="col-10">
                         <div class="input-group input-group-sm">
-                            <input type="text" class="form-control" placeholder="public key" readonly>
+                            <input type="text" class="public-key form-control" placeholder="public key" readonly>
                             <span class="input-group-btn">
-                                <button class="btn btn-secondary" type="button">Change</button>
+                                <button class="public-key btn btn-secondary" type="button">Change</button>
                             </span>
                         </div>
                     </div>
@@ -34,9 +34,9 @@
                 <div class="form-group row justify-content-center">
                     <div class="col-10">
                         <div class="input-group input-group-sm">
-                            <input type="text" class="form-control" placeholder="private key" readonly>
+                            <input type="text" class="private-key form-control" placeholder="private key" readonly>
                             <span class="input-group-btn">
-                                <button class="btn btn-secondary" type="button">Change</button>
+                                <button class="private-key btn btn-secondary" type="button">Change</button>
                             </span>
                         </div>
                     </div>
@@ -47,14 +47,14 @@
                 <div class="form-group row">
                     <label class="col-3 col-form-label col-form-label-sm">Username:</label>
                     <div class="col-9">
-                        <input class="form-control form-control-sm" type="text">
+                        <input class="username form-control form-control-sm" type="text">
                     </div>
                 </div>
 
                 <div class="form-group row">
                     <label class="col-3 col-form-label col-form-label-sm">Password:</label>
                     <div class="col-9">
-                        <input class="form-control form-control-sm" type="password">
+                        <input class="password form-control form-control-sm" type="password">
                     </div>
                 </div>
             </div>
