--- a/src/views/scss/editor.scss
+++ b/src/views/scss/editor.scss
@@ -2,7 +2,7 @@
 
 .editor {
     margin-top:40px;
-    background: #fff;
+    background: $color-editor-bg;
 
     -webkit-box-flex: 0;
     flex: 0 0 50%;
