--- a/src/views/scss/_variables.scss
+++ b/src/views/scss/_variables.scss
@@ -15,6 +15,8 @@ $color-primary-dark: darken($color-primary, 10%) !default;
 $color-primary-darker: darken($color-primary-dark, 6%) !default;
 
 $color-bg: rgb(243, 243, 243) !default;
+$color-reader-bg: rgb(243, 243, 243);
+$color-editor-bg: #fff;
 $color-divider: darken($color-bg, 3%) !default;
 
 $color-text: #4f5f6f !default;
