--- a/src/views/scss/reader.scss
+++ b/src/views/scss/reader.scss
@@ -1,9 +1,14 @@
+@import "variables";
+
 .reader {
+    $outline-width: 230px;
+
     // prevent media query of bootstrap
     -webkit-box-flex: 0;
     flex: 0 0 50%;
     max-width: 50%;
     padding: 0;
+    background-color: $color-reader-bg;
 
     font: {
         family: arial,sans-serif;
@@ -18,6 +23,23 @@
             // TODO: should calculate this size dynamically
             // scroll beyond the bottom
             margin-bottom: 280px;
+        }
+    }
+
+    .outline {
+        position: absolute;
+        top: 0;
+        bottom: 0;
+        right: 0;
+        width: $outline-width;
+        background-color: darken($color-reader-bg, 5%);
+        display: none;
+    }
+
+    &.show-outline {
+        padding-right: $outline-width;
+        .outline {
+            display: block;
         }
     }
 }
