outline header support

--- a/src/views/scss/reader.scss
+++ b/src/views/scss/reader.scss
@@ -33,6 +33,7 @@
         right: 0;
         width: $outline-width;
         background-color: darken($color-reader-bg, 5%);
+        overflow-x: hidden;
         display: none;
     }
 
